# five_os

./: .gitignore  Cargo.toml  build.rs  info.md  readme.md
.cargo/: config
crates/codegen_mvendorid/: Cargo.toml
crates/codegen_mvendorid/src/: lib.rs
crates/five_os/: Cargo.toml
crates/five_os/src/: global_pages.rs  kernel_heap.rs  layout.rs  lib.rs  logo.rs  main.rs  memory_manager.rs  trap.rs
crates/five_os/src/assembly/: boot.s  cpu.s
crates/fiveos_allocator/: Cargo.toml
crates/fiveos_allocator/src/: byte.rs  lib.rs  page.rs  static_page.rs
crates/fiveos_allocator/src/page/: bitmap.rs  info.rs
crates/fiveos_peripherals/: Cargo.toml
crates/fiveos_peripherals/src/: greycode.rs  lib.rs  macros.rs
crates/fiveos_riscv/: Cargo.toml  readme.md
crates/fiveos_riscv/src/: address.rs  cpu.rs  lib.rs
crates/fiveos_riscv/src/cpu/: registers.rs  status.rs  uart.rs
crates/fiveos_riscv/src/cpu/registers/: mcause.rs  misa.rs  mstatus.rs  mtvec.rs  satp.rs
crates/fiveos_riscv/src/mmu/: entry.rs  mod.rs  page_table.rs  physical_address.rs  virtual_address.rs
crates/fiveos_virtio/: Cargo.toml
crates/fiveos_virtio/src/: clint.rs  lib.rs  plic.rs  rtc.rs  uart.rs  virtio.rs
src/: assembly.rs  console.rs  cpu_status.rs  graveyard.rs  kmem.rs  layout.rs  lib.rs  logo.rs  main.rs  mem.rs  memory.rs  mmu.rs  page.rs  process.rs  trap.rs  uart.rs
src/assembly/: boot.riscv  boot.s  cpu.s  trap.riscv  trap.s
src/console/: commands.rs
src/linker/: layout.lds
src/mem/: bitmap.rs  page.rs
src/memory/: allocator.rs
src/memory/allocator/: byte.rs  page.rs
src/memory/allocator/page/: bitmap.rs
src/mmu/: entry.rs  forty_eight.rs  mod.rs  page_table.rs  thirty_nine.rs  thirty_two.rs
src/mmu/page_table/: descriptor.rs  forty_eight.rs  untyped.rs
src/mmu/page_table/untyped/: entry.rs
(+7 files in other folders)
