[package]
name = "five_os"
version = "0.2.0"
authors = ["Daniel Boyle <boylede@gmail.com>"]
readme = "readme.md"
edition = "2021"

[dependencies]
fiveos_riscv = {path="../fiveos_riscv"}
fiveos_virtio = {path="../fiveos_virtio"}
fiveos_allocator = {path="../fiveos_allocator"}

[[bin]]
name = "five_os"
test = false
bench = false

[build-dependencies]
cc = "1.0.46"
